# sparse_solver

./: CMakeLists.txt
main/: CMakeLists.txt  main.cpp
solver/: CMakeLists.txt  kernel.h  solver.cpp  solver.h
